--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li>Major in Web and Mobile Application Development</li>
           </p><br>
           <h1 class = "motto">"Don't Settle For Less, Aim For Excellence"</h1>
-          <a href="#">Download CV</a>
+          <a href="RESUME.pdf">Download CV</a>
         </div>
       </div>
     </div>
