--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
           <div class="box">
             <div class="text">Leadership Training and Seminar Attended</div>
             <h4>Junior High School: </h4>
-            <p> 28TH YOUNG MEN CHRISTIAN ASSOCIATION (YMCA) NATIONAL ASSEMBLY OF HIGH SCHOOL STUDENTS AND 21ST YMCA NATIONAL SCHOOL CLUB ADVISERS’ SEMINAR.</p><br>
+            <p> 28TH YOUNG MEN CHRISTIAN ASSOCIATION (YMCA) NATIONAL ASSEMBLY OF HIGH SCHOOL STUDENTS AND 21ST YMCA NATIONAL SCHOOL CLUB ADVISERS’ SEMINAR.
+              @ SENIOR MESS, TEACHERS CAMP BAGUIO CITY. (2016)
+            </p><br>
             <h4>Senior High School: </h4>
             <p> 29TH YMCA NATIONAL ASSEMBLY OF HIGH SCHOOL STUDENTS AND 22ST YMCA NATIONAL SCHOOL CLUB ADVISERS’ SEMINAR.
+              @ SENIOR MESS, TEACHERS CAMP BAGUIO CITY. (2017)
               </p><br>
             <h4>Tertiary: </h4>
             <p> 12th ICT ROADSHOW Seminar (2022) @ Devenecia Hall, Isabela State Univerity Echague Campus.</p>
